fix: se agregan campoos de pruebas y se corrigen tests